@@ -1,3 +1,7 @@
+2002-05-04  Zoran Vasiljevic <zoran@archiware.com>  
+	* generic/threadSvCmd.c: removed errant reference to (still not)
+	supported shared dictionary and shared keylist datatypes.
+
 2002-04-27  Zoran Vasiljevic <zoran@archiware.com>  
 
 	* generic/threadCmd.c: fixed processing of -eventmark. We now
